Build docker service