@@ -7,10 +7,10 @@ lazy val root = (project in file("."))
     name := "trending-engine-scala",
     
     libraryDependencies ++= Seq(
-      // Spark
-      "org.apache.spark" %% "spark-core" % "3.5.0" % "provided",
-      "org.apache.spark" %% "spark-sql" % "3.5.0" % "provided",
-      "org.apache.spark" %% "spark-streaming" % "3.5.0" % "provided",
+      // Spark - Removed "provided" to allow running locally with 'sbt run'
+      "org.apache.spark" %% "spark-core" % "3.5.0",
+      "org.apache.spark" %% "spark-sql" % "3.5.0",
+      "org.apache.spark" %% "spark-streaming" % "3.5.0",
       
       // Kafka
       "org.apache.spark" %% "spark-sql-kafka-0-10" % "3.5.0",
@@ -27,7 +27,8 @@ lazy val root = (project in file("."))
       // Logging
       "ch.qos.logback" % "logback-classic" % "1.4.14",
       "com.typesafe.scala-logging" %% "scala-logging" % "3.9.5",
-      
+      "org.apache.logging.log4j" % "log4j-core" % "2.22.1",
+
       // Configuration
       "com.typesafe" % "config" % "1.4.3",
       
@@ -41,5 +42,24 @@ lazy val root = (project in file("."))
       case x => MergeStrategy.first
     },
     
-    assembly / mainClass := Some("com.newspulse.trending.TrendingEngine")
+    assembly / mainClass := Some("com.newspulse.trending.TrendingEngine"),
+
+    // Required for Java 17+ compatibility with Spark
+    fork := true,
+    javaOptions ++= Seq(
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+      "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+    )
   )
